--- a/pybconfig.json
+++ b/pybconfig.json
@@ -1,10 +1,7 @@
 {
-	"indentation": {
-		"preferTabs": true,
-		"size": 4
-	},
+	"preferTabs": true,
+	"indentationSize": 4,
 	"inFolder": "./demo/in",
 	"outFolder": "./demo/out",
-
 	"fileExtension": "pyb"
 }
