edit pybconfig to include line break

--- a/pybconfig.json
+++ b/pybconfig.json
@@ -3,5 +3,6 @@
 	"indentationSize": 4,
 	"inFolder": "./demo/in",
 	"outFolder": "./demo/out",
-	"fileExtension": "pyb"
+	"fileExtension": "pyb",
+	"lineSeparator": "\n"
 }
